# map2loop-2-legacy

./: .flake8  .git.sh  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  datasources.rst  dependencies.py  dependencies.txt  dependencies3.7.txt  dependencies3.9.txt  docker-compose.yml  jupyter-client.sh  mark_install_notes.txt  modeltest.loop3d  readme2.md  setup.py
conda/: conda-build.py  meta.yaml
engines/: noddy
m2l-dev/: Dockerfile  environment.yml
m2l-dev/m2m/m2m_source/: CMakeLists.txt  Parfile
m2l-dev/m2m/m2m_source/data/: colors.txt  colors2.txt
m2l-dev/m2m/m2m_source/data/test_wa_wgs84/: T1_500k_linear.sbn  T1_500k_linear.sbx  T1_500k_linear.shp  T1_500k_linear.shx  warox_wgs84.dbf  warox_wgs84.sbn  warox_wgs84.shp  warox_wgs84.shx
m2l-dev/m2m/m2m_source/src/: converter.cpp  converter.h  converter_types.h  converter_utils.cpp  converter_utils.h  data_reader.h  file_utils.h  graph.cpp  graph.h  graph_utils.cpp  graph_utils.h  intersector.cpp  intersector.h  map2model.cpp  parameters_reader.cpp  parameters_reader.h  parameters_utils.h  topology_analyzer.cpp
m2l-dev/m2m/m2m_source/src/lib/: clipper.cpp  svgbuilder.cpp
m2l-dev/m2m/m2m_source/utils/: jaccard.gnu
m2m/: build-m2m.sh
map2loop/: ASUD.csv  Geophysics.py  SpaceTime.py  __init__.py  cfg.py  config.py  deformation_history.py  m2l_enums.py  m2l_export.py  m2l_geometry.py  m2l_interpolation.py  m2l_map_checker.py  m2l_subsampling.py  m2l_utils.py  map.py  map2graph.py  mapdata.py  project.py  stratigraphic_column.py  topology.py
maps/: cfg.py  (+6 more)
(+127 files in other folders)
